@@ -9,4 +9,5 @@ export(dotprod)
 export(doubles)
 export(dsrwon)
 export(elim)
+export(encode)
 export(plautrans)
